# ICT-example

./: .gitignore  .gitmodules  README.md  locobot_demo.py  set_locobot.py
Docker/cpu/: Dockerfile  build.sh  docker_join.sh  docker_run.sh  ros_entrypoint.sh
Docker/gpu/: Dockerfile  README.md  build.sh  docker_join.sh  docker_join_ori.sh  docker_run.sh  docker_run_ori.sh  locobot_install_all.sh
catkin_ws/: frames.gv
catkin_ws/src/baseline_navi/: CMakeLists.txt  package.xml
catkin_ws/src/baseline_navi/launch/: apriltag_to_goalpoint.launch  apriltags_to_goalpoint.launch  bringup.launch  goal_point.launch  locobot_grasp.launch  navigation.launch  stage_switch.launch
catkin_ws/src/baseline_navi/src/: apriltags_to_goalpoint.py  apriltags_to_goalpoint_ori.py  goal_point.py  locobot_grasp.py  navigation.py  navigation_ori.py  stage_switch.py
catkin_ws/src/baseline_navi/srv/: Stage_Grasp.srv  Stage_Totag.srv
catkin_ws/src/baseline_navi_demo/: CMakeLists.txt  package.xml
catkin_ws/src/baseline_navi_demo/launch/: bringup.launch  bringup_test.launch  (+1 more)
catkin_ws/src/colab_file/: AvgPool2d.patch  BasicBlock.patch  BatchNorm2d.patch  Conv2d.patch  IfullRobHWNet.patch  Linear.patch  MaxPool2d.patch  ReLU.patch  Sequential.patch  Softmax.patch  sis-20220314-patch-grasp.ipynb
catkin_ws/src/locobot/: CMakeLists.txt  package.xml
catkin_ws/src/locobot_description/: CMakeLists.txt  package.xml
catkin_ws/src/locobot_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/motion_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/motion_pkg_demo/: CMakeLists.txt  package.xml
(+19 files in other folders)
